--- a/base/css/style.css
+++ b/base/css/style.css
@@ -225,6 +225,9 @@ textarea {
   color: #adadad;
   font-weight: 400;
 }
+.ui.input {
+  width: 100%;
+}
 .ui.input input {
   width: 100%;
   font-size: 1.8rem;
@@ -266,6 +269,7 @@ textarea {
   width: auto;
   height: auto;
   line-height: 3.1rem;
+  margin: 0;
   padding: 0 1.4rem;
   font-weight: 600;
   color: #1e5f8d !important;
@@ -275,6 +279,10 @@ textarea {
 }
 .ui.button.basic.secondary.rounded {
   border-radius: 6px;
+}
+.ui.button.basic.secondary.extend {
+  width: 100%;
+  line-height: 3.4rem;
 }
 .ui.button.basic.secondary:hover, .ui.button.basic.secondary:focus, .ui.button.basic.secondary:active {
   -webkit-box-shadow: none !important;
@@ -326,6 +334,9 @@ textarea {
   color: #1e5f8d;
 }
 
+.ui.basic.table {
+  line-height: 100%;
+}
 .ui.basic.table thead th {
   padding: 1.2rem 0 !important;
   font-size: 1.8rem;
@@ -335,7 +346,7 @@ textarea {
   background: #ebf8ff;
 }
 .ui.basic.table tbody td {
-  padding: 1.6rem 1.4rem;
+  padding: 1.4rem;
   font-size: 1.6rem;
   color: #727272;
   text-align: center;
@@ -351,6 +362,10 @@ textarea {
   font-weight: 600;
   text-align: left;
   vertical-align: middle;
+}
+.data-tbl tbody th.rowspan-style1 {
+  padding-top: 1.5rem;
+  vertical-align: top;
 }
 .data-tbl tbody td {
   padding-bottom: 1.6rem;
@@ -576,6 +591,9 @@ textarea {
   z-index: 1;
 }
 
+/*---------------------------------------------------------------
+  [모달 팝업]
+-----------------------------------------------------------------*/
 .blocker {
   position: fixed;
   top: 0;
@@ -586,7 +604,7 @@ textarea {
   height: 100%;
   overflow: auto;
   z-index: 10;
-  padding: 20px;
+  padding: 2rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background: rgba(0, 0, 0, 0.1);
@@ -678,7 +696,7 @@ textarea {
   }
 }
 /*---------------------------------------------------------------
-  [모달 팝업]
+  [모달 팝업 커스텀]
 -----------------------------------------------------------------*/
 .blocker {
   display: -webkit-box;
@@ -699,10 +717,10 @@ textarea {
 }
 
 .modal a.close-modal {
-  top: 12px;
-  right: 12px;
-  width: 16px;
-  height: 15px;
+  top: 1.6rem;
+  right: 1.8rem;
+  width: 1.6rem;
+  height: 1.6rem;
   background-image: url(/base/images/btn_close_gray.png);
 }
 .modal-container {
@@ -749,6 +767,11 @@ textarea {
   gap: 0 0.4rem;
   margin-top: 0.8rem;
   padding: 1rem 3rem 2.5rem;
+}
+.modal-bottom.button-both {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .modal-bottom .ui.button.basic {
   width: 8rem;
@@ -817,6 +840,9 @@ textarea {
   border-top: 1px solid #b8b8b8;
   background: #e7e7e7;
   color: #b8b8b8;
+}
+.ly-copyright.c-white {
+  background: #fff;
 }
 
 /* GNB */
